--- a/data/results/plist/CustomFilter_GF_Arabic.plist
+++ b/data/results/plist/CustomFilter_GF_Arabic.plist
@@ -115,6 +115,7 @@
 			<string>perthousand-ar</string>
 			<string>comma-ar</string>
 			<string>dateseparator-ar</string>
+			<string>tahabove-ar</string>
 			<string>semicolon-ar</string>
 			<string>question-ar</string>
 			<string>hamza-ar</string>
@@ -165,6 +166,8 @@
 			<string>madda-ar</string>
 			<string>hamzaabove-ar</string>
 			<string>hamzabelow-ar</string>
+			<string>alefbelow-ar</string>
+			<string>noonghunnaabove-ar</string>
 			<string>zero-ar</string>
 			<string>one-ar</string>
 			<string>two-ar</string>
@@ -179,20 +182,26 @@
 			<string>decimalseparator-ar</string>
 			<string>thousandseparator-ar</string>
 			<string>asterisk-ar</string>
+			<string>behDotless-ar</string>
+			<string>qafDotless-ar</string>
 			<string>alefabove-ar</string>
+			<string>alefWasla-ar</string>
 			<string>tteh-ar</string>
 			<string>peh-ar</string>
 			<string>tcheh-ar</string>
 			<string>ddal-ar</string>
 			<string>rreh-ar</string>
 			<string>jeh-ar</string>
+			<string>fehDotless-ar</string>
 			<string>keheh-ar</string>
 			<string>gaf-ar</string>
+			<string>noonghunna-ar</string>
 			<string>hehDoachashmee-ar</string>
 			<string>hehgoal-ar</string>
 			<string>yehFarsi-ar</string>
 			<string>yehbarree-ar</string>
 			<string>fullstop-ar</string>
+			<string>threedotsabove-ar</string>
 			<string>zeroFarsi-ar</string>
 			<string>oneFarsi-ar</string>
 			<string>twoFarsi-ar</string>
@@ -217,8 +226,41 @@
 			<string>euro</string>
 			<string>trademark</string>
 			<string>minus</string>
+			<string>dottedCircle</string>
 			<string>parenleft-ar</string>
 			<string>parenright-ar</string>
+			<string>fourFarsi-ar.urdu</string>
+			<string>sevenFarsi-ar.urdu</string>
+			<string>dotabove-ar</string>
+			<string>dotbelow-ar</string>
+			<string>dotcenter-ar</string>
+			<string>twodotshorizontalabove-ar</string>
+			<string>twodotshorizontalbelow-ar</string>
+			<string>threedotsdownabove-ar</string>
+			<string>threedotsdownbelow-ar</string>
+			<string>threedotsdowncenter-ar</string>
+			<string>threedotsupabove-ar</string>
+			<string>wasla-ar</string>
+			<string>gafsarkashabove-ar</string>
+			<string>hamzaaboveDamma-ar</string>
+			<string>hamzaaboveDammatan-ar</string>
+			<string>hamzaaboveFatha-ar</string>
+			<string>hamzaaboveFathatan-ar</string>
+			<string>hamzaaboveSukun-ar</string>
+			<string>hamzabelowKasra-ar</string>
+			<string>hamzabelowKasratan-ar</string>
+			<string>shaddaFathatan-ar</string>
+			<string>shaddaDammatan-ar</string>
+			<string>shaddaKasratan-ar</string>
+			<string>shaddaFatha-ar</string>
+			<string>shaddaDamma-ar</string>
+			<string>shaddaKasra-ar</string>
+			<string>shaddaAlefabove-ar</string>
+			<string>lam_alef-ar</string>
+			<string>lam_alefHamzaabove-ar</string>
+			<string>lam_alefHamzabelow-ar</string>
+			<string>lam_alefMadda-ar</string>
+			<string>lam_alefWasla-ar</string>
 		</array>
 		<key>name</key>
 		<string>GF_Arabic_Core</string>
@@ -231,6 +273,7 @@
 			<string>perthousand-ar</string>
 			<string>comma-ar</string>
 			<string>dateseparator-ar</string>
+			<string>tahabove-ar</string>
 			<string>semicolon-ar</string>
 			<string>question-ar</string>
 			<string>hamza-ar</string>
@@ -281,6 +324,8 @@
 			<string>madda-ar</string>
 			<string>hamzaabove-ar</string>
 			<string>hamzabelow-ar</string>
+			<string>alefbelow-ar</string>
+			<string>noonghunnaabove-ar</string>
 			<string>zero-ar</string>
 			<string>one-ar</string>
 			<string>two-ar</string>
@@ -295,20 +340,26 @@
 			<string>decimalseparator-ar</string>
 			<string>thousandseparator-ar</string>
 			<string>asterisk-ar</string>
+			<string>behDotless-ar</string>
+			<string>qafDotless-ar</string>
 			<string>alefabove-ar</string>
+			<string>alefWasla-ar</string>
 			<string>tteh-ar</string>
 			<string>peh-ar</string>
 			<string>tcheh-ar</string>
 			<string>ddal-ar</string>
 			<string>rreh-ar</string>
 			<string>jeh-ar</string>
+			<string>fehDotless-ar</string>
 			<string>keheh-ar</string>
 			<string>gaf-ar</string>
+			<string>noonghunna-ar</string>
 			<string>hehDoachashmee-ar</string>
 			<string>hehgoal-ar</string>
 			<string>yehFarsi-ar</string>
 			<string>yehbarree-ar</string>
 			<string>fullstop-ar</string>
+			<string>threedotsabove-ar</string>
 			<string>zeroFarsi-ar</string>
 			<string>oneFarsi-ar</string>
 			<string>twoFarsi-ar</string>
@@ -322,8 +373,41 @@
 			<string>kehehThreedotsabove-ar</string>
 			<string>guilsinglleft</string>
 			<string>guilsinglright</string>
+			<string>dottedCircle</string>
 			<string>parenleft-ar</string>
 			<string>parenright-ar</string>
+			<string>threedotsdowncenter-ar</string>
+			<string>shaddaFathatan-ar</string>
+			<string>hamzaaboveDammatan-ar</string>
+			<string>dotabove-ar</string>
+			<string>threedotsupabove-ar</string>
+			<string>hamzabelowKasratan-ar</string>
+			<string>shaddaDamma-ar</string>
+			<string>shaddaAlefabove-ar</string>
+			<string>shaddaKasratan-ar</string>
+			<string>sevenFarsi-ar.urdu</string>
+			<string>lam_alefHamzaabove-ar</string>
+			<string>hamzaaboveFatha-ar</string>
+			<string>wasla-ar</string>
+			<string>hamzaaboveSukun-ar</string>
+			<string>gafsarkashabove-ar</string>
+			<string>lam_alefHamzabelow-ar</string>
+			<string>shaddaKasra-ar</string>
+			<string>shaddaDammatan-ar</string>
+			<string>lam_alefMadda-ar</string>
+			<string>threedotsdownbelow-ar</string>
+			<string>fourFarsi-ar.urdu</string>
+			<string>twodotshorizontalabove-ar</string>
+			<string>twodotshorizontalbelow-ar</string>
+			<string>dotbelow-ar</string>
+			<string>lam_alefWasla-ar</string>
+			<string>hamzaaboveFathatan-ar</string>
+			<string>shaddaFatha-ar</string>
+			<string>dotcenter-ar</string>
+			<string>hamzabelowKasra-ar</string>
+			<string>threedotsdownabove-ar</string>
+			<string>hamzaaboveDamma-ar</string>
+			<string>lam_alef-ar</string>
 		</array>
 		<key>name</key>
 		<string>GF_Arabic_Core Exclusive</string>
@@ -438,6 +522,7 @@
 			<string>divide</string>
 			<string>perthousand-ar</string>
 			<string>comma-ar</string>
+			<string>tahabove-ar</string>
 			<string>hamza-ar</string>
 			<string>alefMadda-ar</string>
 			<string>alefHamzaabove-ar</string>
@@ -482,6 +567,8 @@
 			<string>shadda-ar</string>
 			<string>sukun-ar</string>
 			<string>hamzaabove-ar</string>
+			<string>alefbelow-ar</string>
+			<string>noonghunnaabove-ar</string>
 			<string>zero-ar</string>
 			<string>one-ar</string>
 			<string>two-ar</string>
@@ -495,7 +582,10 @@
 			<string>percent-ar</string>
 			<string>decimalseparator-ar</string>
 			<string>thousandseparator-ar</string>
+			<string>behDotless-ar</string>
+			<string>qafDotless-ar</string>
 			<string>alefabove-ar</string>
+			<string>alefWasla-ar</string>
 			<string>tteheh-ar</string>
 			<string>beeh-ar</string>
 			<string>tehRing-ar</string>
@@ -520,6 +610,7 @@
 			<string>jeh-ar</string>
 			<string>rehFourdots-ar</string>
 			<string>seenDotbelowDotabove-ar</string>
+			<string>fehDotless-ar</string>
 			<string>veh-ar</string>
 			<string>peheh-ar</string>
 			<string>keheh-ar</string>
@@ -530,6 +621,7 @@
 			<string>ngoeh-ar</string>
 			<string>gueh-ar</string>
 			<string>lamVabove-ar</string>
+			<string>noonghunna-ar</string>
 			<string>rnoon-ar</string>
 			<string>noonRing-ar</string>
 			<string>hehDoachashmee-ar</string>
@@ -543,6 +635,7 @@
 			<string>e-ar</string>
 			<string>fullstop-ar</string>
 			<string>ae-ar</string>
+			<string>threedotsabove-ar</string>
 			<string>zeroFarsi-ar</string>
 			<string>oneFarsi-ar</string>
 			<string>twoFarsi-ar</string>
@@ -567,7 +660,40 @@
 			<string>euro</string>
 			<string>trademark</string>
 			<string>minus</string>
+			<string>dottedCircle</string>
 			<string>commareversed</string>
+			<string>fourFarsi-ar.urdu</string>
+			<string>sevenFarsi-ar.urdu</string>
+			<string>dotabove-ar</string>
+			<string>dotbelow-ar</string>
+			<string>dotcenter-ar</string>
+			<string>twodotshorizontalabove-ar</string>
+			<string>twodotshorizontalbelow-ar</string>
+			<string>threedotsdownabove-ar</string>
+			<string>threedotsdownbelow-ar</string>
+			<string>threedotsdowncenter-ar</string>
+			<string>threedotsupabove-ar</string>
+			<string>wasla-ar</string>
+			<string>gafsarkashabove-ar</string>
+			<string>hamzaaboveDamma-ar</string>
+			<string>hamzaaboveDammatan-ar</string>
+			<string>hamzaaboveFatha-ar</string>
+			<string>hamzaaboveFathatan-ar</string>
+			<string>hamzaaboveSukun-ar</string>
+			<string>hamzabelowKasra-ar</string>
+			<string>hamzabelowKasratan-ar</string>
+			<string>shaddaFathatan-ar</string>
+			<string>shaddaDammatan-ar</string>
+			<string>shaddaKasratan-ar</string>
+			<string>shaddaFatha-ar</string>
+			<string>shaddaDamma-ar</string>
+			<string>shaddaKasra-ar</string>
+			<string>shaddaAlefabove-ar</string>
+			<string>lam_alef-ar</string>
+			<string>lam_alefHamzaabove-ar</string>
+			<string>lam_alefHamzabelow-ar</string>
+			<string>lam_alefMadda-ar</string>
+			<string>lam_alefWasla-ar</string>
 		</array>
 		<key>name</key>
 		<string>GF_Arabic_Plus</string>
@@ -577,6 +703,7 @@
 		<array>
 			<string>perthousand-ar</string>
 			<string>comma-ar</string>
+			<string>tahabove-ar</string>
 			<string>hamza-ar</string>
 			<string>alefMadda-ar</string>
 			<string>alefHamzaabove-ar</string>
@@ -621,6 +748,8 @@
 			<string>shadda-ar</string>
 			<string>sukun-ar</string>
 			<string>hamzaabove-ar</string>
+			<string>alefbelow-ar</string>
+			<string>noonghunnaabove-ar</string>
 			<string>zero-ar</string>
 			<string>one-ar</string>
 			<string>two-ar</string>
@@ -634,7 +763,10 @@
 			<string>percent-ar</string>
 			<string>decimalseparator-ar</string>
 			<string>thousandseparator-ar</string>
+			<string>behDotless-ar</string>
+			<string>qafDotless-ar</string>
 			<string>alefabove-ar</string>
+			<string>alefWasla-ar</string>
 			<string>tteheh-ar</string>
 			<string>beeh-ar</string>
 			<string>tehRing-ar</string>
@@ -659,6 +791,7 @@
 			<string>jeh-ar</string>
 			<string>rehFourdots-ar</string>
 			<string>seenDotbelowDotabove-ar</string>
+			<string>fehDotless-ar</string>
 			<string>veh-ar</string>
 			<string>peheh-ar</string>
 			<string>keheh-ar</string>
@@ -669,6 +802,7 @@
 			<string>ngoeh-ar</string>
 			<string>gueh-ar</string>
 			<string>lamVabove-ar</string>
+			<string>noonghunna-ar</string>
 			<string>rnoon-ar</string>
 			<string>noonRing-ar</string>
 			<string>hehDoachashmee-ar</string>
@@ -682,6 +816,7 @@
 			<string>e-ar</string>
 			<string>fullstop-ar</string>
 			<string>ae-ar</string>
+			<string>threedotsabove-ar</string>
 			<string>zeroFarsi-ar</string>
 			<string>oneFarsi-ar</string>
 			<string>twoFarsi-ar</string>
@@ -695,7 +830,40 @@
 			<string>sindhiampersand-ar</string>
 			<string>sindhipostpositionmen-ar</string>
 			<string>reversedsemicolon</string>
+			<string>dottedCircle</string>
 			<string>commareversed</string>
+			<string>threedotsdowncenter-ar</string>
+			<string>shaddaFathatan-ar</string>
+			<string>hamzaaboveDammatan-ar</string>
+			<string>dotabove-ar</string>
+			<string>threedotsupabove-ar</string>
+			<string>hamzabelowKasratan-ar</string>
+			<string>shaddaDamma-ar</string>
+			<string>shaddaAlefabove-ar</string>
+			<string>shaddaKasratan-ar</string>
+			<string>sevenFarsi-ar.urdu</string>
+			<string>lam_alefHamzaabove-ar</string>
+			<string>hamzaaboveFatha-ar</string>
+			<string>wasla-ar</string>
+			<string>hamzaaboveSukun-ar</string>
+			<string>gafsarkashabove-ar</string>
+			<string>lam_alefHamzabelow-ar</string>
+			<string>shaddaKasra-ar</string>
+			<string>shaddaDammatan-ar</string>
+			<string>lam_alefMadda-ar</string>
+			<string>threedotsdownbelow-ar</string>
+			<string>fourFarsi-ar.urdu</string>
+			<string>twodotshorizontalabove-ar</string>
+			<string>twodotshorizontalbelow-ar</string>
+			<string>dotbelow-ar</string>
+			<string>lam_alefWasla-ar</string>
+			<string>hamzaaboveFathatan-ar</string>
+			<string>shaddaFatha-ar</string>
+			<string>dotcenter-ar</string>
+			<string>hamzabelowKasra-ar</string>
+			<string>threedotsdownabove-ar</string>
+			<string>hamzaaboveDamma-ar</string>
+			<string>lam_alef-ar</string>
 		</array>
 		<key>name</key>
 		<string>GF_Arabic_Plus Exclusive</string>
