Added GF_Arabic_Core to GF_Arabic_Plus

--- a/Lib/glyphsets/definitions/GF_Arabic_Plus.yaml
+++ b/Lib/glyphsets/definitions/GF_Arabic_Plus.yaml
@@ -2,6 +2,7 @@ description: Covering additional less widely used languages (but not characters 
   for historical or specialized texts)
 include_glyphsets:
 - GF_Latin_Kernel
+- GF_Arabic_Core
 language_codes:
 - ckb_Arab
 - zlm_Arab
