--- a/data/results/plist/CustomFilter_GF_All.plist
+++ b/data/results/plist/CustomFilter_GF_All.plist
@@ -717,8 +717,14 @@
 			<string>underscore</string>
 			<string>braceleft</string>
 			<string>braceright</string>
+			<string>guillemetleft</string>
 			<string>periodcentered</string>
+			<string>guillemetright</string>
 			<string>comma-ar</string>
+			<string>dateseparator-ar</string>
+			<string>semicolon-ar</string>
+			<string>question-ar</string>
+			<string>asterisk-ar</string>
 			<string>fullstop-ar</string>
 			<string>sindhiampersand-ar</string>
 			<string>endash</string>
@@ -729,8 +735,12 @@
 			<string>quotedblright</string>
 			<string>bullet</string>
 			<string>ellipsis</string>
+			<string>guilsinglleft</string>
+			<string>guilsinglright</string>
 			<string>reversedsemicolon</string>
 			<string>commareversed</string>
+			<string>parenleft-ar</string>
+			<string>parenright-ar</string>
 			<string>fourFarsi-ar.urdu</string>
 			<string>sevenFarsi-ar.urdu</string>
 			<string>zero</string>
@@ -803,7 +813,9 @@
 			<string>kasra-ar</string>
 			<string>shadda-ar</string>
 			<string>sukun-ar</string>
+			<string>madda-ar</string>
 			<string>hamzaabove-ar</string>
+			<string>hamzabelow-ar</string>
 			<string>alefabove-ar</string>
 			<string>alefWasla-ar</string>
 			<string>alefWasla-ar.fina</string>
@@ -887,6 +899,8 @@
 			<string>alefHamzaabove-ar.fina</string>
 			<string>wawHamzaabove-ar</string>
 			<string>wawHamzaabove-ar.fina</string>
+			<string>alefHamzabelow-ar</string>
+			<string>alefHamzabelow-ar.fina</string>
 			<string>yehHamzaabove-ar</string>
 			<string>yehHamzaabove-ar.init</string>
 			<string>yehHamzaabove-ar.medi</string>
@@ -959,6 +973,7 @@
 			<string>ghain-ar.init</string>
 			<string>ghain-ar.medi</string>
 			<string>ghain-ar.fina</string>
+			<string>kashida-ar</string>
 			<string>feh-ar</string>
 			<string>feh-ar.init</string>
 			<string>feh-ar.medi</string>
@@ -997,6 +1012,10 @@
 			<string>yeh-ar.init</string>
 			<string>yeh-ar.medi</string>
 			<string>yeh-ar.fina</string>
+			<string>tteh-ar</string>
+			<string>tteh-ar.init</string>
+			<string>tteh-ar.medi</string>
+			<string>tteh-ar.fina</string>
 			<string>tteheh-ar</string>
 			<string>tteheh-ar.init</string>
 			<string>tteheh-ar.medi</string>
@@ -1049,6 +1068,8 @@
 			<string>tcheheh-ar.init</string>
 			<string>tcheheh-ar.medi</string>
 			<string>tcheheh-ar.fina</string>
+			<string>ddal-ar</string>
+			<string>ddal-ar.fina</string>
 			<string>dalRing-ar</string>
 			<string>dalRing-ar.fina</string>
 			<string>dalDotbelow-ar</string>
@@ -1059,6 +1080,8 @@
 			<string>ddahal-ar.fina</string>
 			<string>dalThreedotsdown-ar</string>
 			<string>dalThreedotsdown-ar.fina</string>
+			<string>rreh-ar</string>
+			<string>rreh-ar.fina</string>
 			<string>rehRing-ar</string>
 			<string>rehRing-ar.fina</string>
 			<string>rehVbelow-ar</string>
@@ -1125,6 +1148,10 @@
 			<string>hehDoachashmee-ar.init</string>
 			<string>hehDoachashmee-ar.medi</string>
 			<string>hehDoachashmee-ar.fina</string>
+			<string>hehgoal-ar</string>
+			<string>hehgoal-ar.init</string>
+			<string>hehgoal-ar.medi</string>
+			<string>hehgoal-ar.fina</string>
 			<string>oe-ar</string>
 			<string>oe-ar.fina</string>
 			<string>u-ar</string>
@@ -1147,8 +1174,14 @@
 			<string>e-ar.init</string>
 			<string>e-ar.medi</string>
 			<string>e-ar.fina</string>
+			<string>yehbarree-ar</string>
+			<string>yehbarree-ar.fina</string>
 			<string>ae-ar</string>
 			<string>ae-ar.fina</string>
+			<string>kehehThreedotsabove-ar</string>
+			<string>kehehThreedotsabove-ar.init</string>
+			<string>kehehThreedotsabove-ar.medi</string>
+			<string>kehehThreedotsabove-ar.fina</string>
 		</array>
 		<key>name</key>
 		<string>GF_Arabic_Plus</string>
@@ -1156,120 +1189,22 @@
 	<dict>
 		<key>list</key>
 		<array>
-			<string>dottedCircle</string>
-			<string>percent-ar</string>
-			<string>perthousand-ar</string>
 			<string>sindhipostpositionmen-ar</string>
-			<string>comma-ar</string>
 			<string>commareversed</string>
-			<string>fullstop-ar</string>
 			<string>reversedsemicolon</string>
 			<string>sindhiampersand-ar</string>
-			<string>decimalseparator-ar</string>
-			<string>eight-ar</string>
-			<string>eightFarsi-ar</string>
-			<string>five-ar</string>
-			<string>fiveFarsi-ar</string>
-			<string>four-ar</string>
-			<string>fourFarsi-ar</string>
-			<string>fourFarsi-ar.urdu</string>
-			<string>nine-ar</string>
-			<string>nineFarsi-ar</string>
-			<string>one-ar</string>
-			<string>oneFarsi-ar</string>
-			<string>seven-ar</string>
-			<string>sevenFarsi-ar</string>
-			<string>sevenFarsi-ar.urdu</string>
-			<string>six-ar</string>
-			<string>sixFarsi-ar</string>
-			<string>thousandseparator-ar</string>
-			<string>three-ar</string>
-			<string>threeFarsi-ar</string>
-			<string>two-ar</string>
-			<string>twoFarsi-ar</string>
-			<string>zero-ar</string>
-			<string>zeroFarsi-ar</string>
-			<string>alefabove-ar</string>
-			<string>alefbelow-ar</string>
-			<string>damma-ar</string>
-			<string>dammatan-ar</string>
-			<string>dotabove-ar</string>
-			<string>dotbelow-ar</string>
-			<string>dotcenter-ar</string>
-			<string>fatha-ar</string>
-			<string>fathatan-ar</string>
-			<string>gafsarkashabove-ar</string>
-			<string>hamzaabove-ar</string>
-			<string>hamzaaboveDamma-ar</string>
-			<string>hamzaaboveDammatan-ar</string>
-			<string>hamzaaboveFatha-ar</string>
-			<string>hamzaaboveFathatan-ar</string>
-			<string>hamzaaboveSukun-ar</string>
-			<string>hamzabelowKasra-ar</string>
-			<string>hamzabelowKasratan-ar</string>
-			<string>kasra-ar</string>
-			<string>kasratan-ar</string>
-			<string>noonghunnaabove-ar</string>
-			<string>shadda-ar</string>
-			<string>shaddaAlefabove-ar</string>
-			<string>shaddaDamma-ar</string>
-			<string>shaddaDammatan-ar</string>
-			<string>shaddaFatha-ar</string>
-			<string>shaddaFathatan-ar</string>
-			<string>shaddaKasra-ar</string>
-			<string>shaddaKasratan-ar</string>
-			<string>sukun-ar</string>
-			<string>tahabove-ar</string>
-			<string>threedotsabove-ar</string>
-			<string>threedotsdownabove-ar</string>
-			<string>threedotsdownbelow-ar</string>
-			<string>threedotsdowncenter-ar</string>
-			<string>threedotsupabove-ar</string>
-			<string>twodotshorizontalabove-ar</string>
-			<string>twodotshorizontalbelow-ar</string>
-			<string>wasla-ar</string>
 			<string>ae-ar</string>
 			<string>ae-ar.fina</string>
-			<string>ain-ar</string>
-			<string>ain-ar.fina</string>
-			<string>ain-ar.init</string>
-			<string>ain-ar.medi</string>
-			<string>alef-ar</string>
-			<string>alef-ar.fina</string>
-			<string>alefHamzaabove-ar</string>
-			<string>alefHamzaabove-ar.fina</string>
-			<string>alefMadda-ar</string>
-			<string>alefMadda-ar.fina</string>
-			<string>alefMaksura-ar</string>
-			<string>alefMaksura-ar.fina</string>
-			<string>alefMaksura-ar.init</string>
-			<string>alefMaksura-ar.medi</string>
-			<string>alefWasla-ar</string>
-			<string>alefWasla-ar.fina</string>
 			<string>beeh-ar</string>
 			<string>beeh-ar.fina</string>
 			<string>beeh-ar.init</string>
 			<string>beeh-ar.medi</string>
-			<string>beh-ar</string>
-			<string>beh-ar.fina</string>
-			<string>beh-ar.init</string>
-			<string>beh-ar.medi</string>
-			<string>behDotless-ar</string>
-			<string>behDotless-ar.fina</string>
-			<string>behDotless-ar.init</string>
-			<string>behDotless-ar.medi</string>
 			<string>beheh-ar</string>
 			<string>beheh-ar.fina</string>
 			<string>beheh-ar.init</string>
 			<string>beheh-ar.medi</string>
-			<string>dad-ar</string>
-			<string>dad-ar.fina</string>
-			<string>dad-ar.init</string>
-			<string>dad-ar.medi</string>
 			<string>dahal-ar</string>
 			<string>dahal-ar.fina</string>
-			<string>dal-ar</string>
-			<string>dal-ar.fina</string>
 			<string>dalDotbelow-ar</string>
 			<string>dalDotbelow-ar.fina</string>
 			<string>dalRing-ar</string>
@@ -1286,30 +1221,10 @@
 			<string>e-ar.fina</string>
 			<string>e-ar.init</string>
 			<string>e-ar.medi</string>
-			<string>feh-ar</string>
-			<string>feh-ar.fina</string>
-			<string>feh-ar.init</string>
-			<string>feh-ar.medi</string>
-			<string>fehDotless-ar</string>
-			<string>fehDotless-ar.fina</string>
-			<string>fehDotless-ar.init</string>
-			<string>fehDotless-ar.medi</string>
-			<string>gaf-ar</string>
-			<string>gaf-ar.fina</string>
-			<string>gaf-ar.init</string>
-			<string>gaf-ar.medi</string>
-			<string>ghain-ar</string>
-			<string>ghain-ar.fina</string>
-			<string>ghain-ar.init</string>
-			<string>ghain-ar.medi</string>
 			<string>gueh-ar</string>
 			<string>gueh-ar.fina</string>
 			<string>gueh-ar.init</string>
 			<string>gueh-ar.medi</string>
-			<string>hah-ar</string>
-			<string>hah-ar.fina</string>
-			<string>hah-ar.init</string>
-			<string>hah-ar.medi</string>
 			<string>hahHamzaabove-ar</string>
 			<string>hahHamzaabove-ar.fina</string>
 			<string>hahHamzaabove-ar.init</string>
@@ -1318,25 +1233,6 @@
 			<string>hahThreedotsabove-ar.fina</string>
 			<string>hahThreedotsabove-ar.init</string>
 			<string>hahThreedotsabove-ar.medi</string>
-			<string>hamza-ar</string>
-			<string>heh-ar</string>
-			<string>heh-ar.fina</string>
-			<string>heh-ar.init</string>
-			<string>heh-ar.medi</string>
-			<string>hehDoachashmee-ar</string>
-			<string>hehDoachashmee-ar.fina</string>
-			<string>hehDoachashmee-ar.init</string>
-			<string>hehDoachashmee-ar.medi</string>
-			<string>jeem-ar</string>
-			<string>jeem-ar.fina</string>
-			<string>jeem-ar.init</string>
-			<string>jeem-ar.medi</string>
-			<string>jeh-ar</string>
-			<string>jeh-ar.fina</string>
-			<string>kaf-ar</string>
-			<string>kaf-ar.fina</string>
-			<string>kaf-ar.init</string>
-			<string>kaf-ar.medi</string>
 			<string>kafRing-ar</string>
 			<string>kafRing-ar.fina</string>
 			<string>kafRing-ar.init</string>
@@ -1345,31 +1241,10 @@
 			<string>kafswash-ar.fina</string>
 			<string>kafswash-ar.init</string>
 			<string>kafswash-ar.medi</string>
-			<string>keheh-ar</string>
-			<string>keheh-ar.fina</string>
-			<string>keheh-ar.init</string>
-			<string>keheh-ar.medi</string>
-			<string>khah-ar</string>
-			<string>khah-ar.fina</string>
-			<string>khah-ar.init</string>
-			<string>khah-ar.medi</string>
-			<string>lam-ar</string>
-			<string>lam-ar.fina</string>
-			<string>lam-ar.init</string>
-			<string>lam-ar.medi</string>
 			<string>lamVabove-ar</string>
 			<string>lamVabove-ar.fina</string>
 			<string>lamVabove-ar.init</string>
 			<string>lamVabove-ar.medi</string>
-			<string>lam_alef-ar</string>
-			<string>lam_alefHamzaabove-ar</string>
-			<string>lam_alefHamzabelow-ar</string>
-			<string>lam_alefMadda-ar</string>
-			<string>lam_alefWasla-ar</string>
-			<string>meem-ar</string>
-			<string>meem-ar.fina</string>
-			<string>meem-ar.init</string>
-			<string>meem-ar.medi</string>
 			<string>ng-ar</string>
 			<string>ng-ar.fina</string>
 			<string>ng-ar.init</string>
@@ -1378,42 +1253,20 @@
 			<string>ngoeh-ar.fina</string>
 			<string>ngoeh-ar.init</string>
 			<string>ngoeh-ar.medi</string>
-			<string>noon-ar</string>
-			<string>noon-ar.fina</string>
-			<string>noon-ar.init</string>
-			<string>noon-ar.medi</string>
 			<string>noonRing-ar</string>
 			<string>noonRing-ar.fina</string>
 			<string>noonRing-ar.init</string>
 			<string>noonRing-ar.medi</string>
-			<string>noonghunna-ar</string>
-			<string>noonghunna-ar.fina</string>
-			<string>noonghunna-ar.init</string>
-			<string>noonghunna-ar.medi</string>
 			<string>nyeh-ar</string>
 			<string>nyeh-ar.fina</string>
 			<string>nyeh-ar.init</string>
 			<string>nyeh-ar.medi</string>
 			<string>oe-ar</string>
 			<string>oe-ar.fina</string>
-			<string>peh-ar</string>
-			<string>peh-ar.fina</string>
-			<string>peh-ar.init</string>
-			<string>peh-ar.medi</string>
 			<string>peheh-ar</string>
 			<string>peheh-ar.fina</string>
 			<string>peheh-ar.init</string>
 			<string>peheh-ar.medi</string>
-			<string>qaf-ar</string>
-			<string>qaf-ar.fina</string>
-			<string>qaf-ar.init</string>
-			<string>qaf-ar.medi</string>
-			<string>qafDotless-ar</string>
-			<string>qafDotless-ar.fina</string>
-			<string>qafDotless-ar.init</string>
-			<string>qafDotless-ar.medi</string>
-			<string>reh-ar</string>
-			<string>reh-ar.fina</string>
 			<string>rehDotbelowdotabove-ar</string>
 			<string>rehDotbelowdotabove-ar.fina</string>
 			<string>rehFourdots-ar</string>
@@ -1426,40 +1279,14 @@
 			<string>rnoon-ar.fina</string>
 			<string>rnoon-ar.init</string>
 			<string>rnoon-ar.medi</string>
-			<string>sad-ar</string>
-			<string>sad-ar.fina</string>
-			<string>sad-ar.init</string>
-			<string>sad-ar.medi</string>
-			<string>seen-ar</string>
-			<string>seen-ar.fina</string>
-			<string>seen-ar.init</string>
-			<string>seen-ar.medi</string>
 			<string>seenDotbelowDotabove-ar</string>
 			<string>seenDotbelowDotabove-ar.fina</string>
 			<string>seenDotbelowDotabove-ar.init</string>
 			<string>seenDotbelowDotabove-ar.medi</string>
-			<string>sheen-ar</string>
-			<string>sheen-ar.fina</string>
-			<string>sheen-ar.init</string>
-			<string>sheen-ar.medi</string>
-			<string>tah-ar</string>
-			<string>tah-ar.fina</string>
-			<string>tah-ar.init</string>
-			<string>tah-ar.medi</string>
-			<string>tcheh-ar</string>
-			<string>tcheh-ar.fina</string>
-			<string>tcheh-ar.init</string>
-			<string>tcheh-ar.medi</string>
 			<string>tcheheh-ar</string>
 			<string>tcheheh-ar.fina</string>
 			<string>tcheheh-ar.init</string>
 			<string>tcheheh-ar.medi</string>
-			<string>teh-ar</string>
-			<string>teh-ar.fina</string>
-			<string>teh-ar.init</string>
-			<string>teh-ar.medi</string>
-			<string>tehMarbuta-ar</string>
-			<string>tehMarbuta-ar.fina</string>
 			<string>tehRing-ar</string>
 			<string>tehRing-ar.fina</string>
 			<string>tehRing-ar.init</string>
@@ -1472,12 +1299,6 @@
 			<string>teheh-ar.fina</string>
 			<string>teheh-ar.init</string>
 			<string>teheh-ar.medi</string>
-			<string>thal-ar</string>
-			<string>thal-ar.fina</string>
-			<string>theh-ar</string>
-			<string>theh-ar.fina</string>
-			<string>theh-ar.init</string>
-			<string>theh-ar.medi</string>
 			<string>tteheh-ar</string>
 			<string>tteheh-ar.fina</string>
 			<string>tteheh-ar.init</string>
@@ -1490,22 +1311,6 @@
 			<string>veh-ar.fina</string>
 			<string>veh-ar.init</string>
 			<string>veh-ar.medi</string>
-			<string>waw-ar</string>
-			<string>waw-ar.fina</string>
-			<string>wawHamzaabove-ar</string>
-			<string>wawHamzaabove-ar.fina</string>
-			<string>yeh-ar</string>
-			<string>yeh-ar.fina</string>
-			<string>yeh-ar.init</string>
-			<string>yeh-ar.medi</string>
-			<string>yehFarsi-ar</string>
-			<string>yehFarsi-ar.fina</string>
-			<string>yehFarsi-ar.init</string>
-			<string>yehFarsi-ar.medi</string>
-			<string>yehHamzaabove-ar</string>
-			<string>yehHamzaabove-ar.fina</string>
-			<string>yehHamzaabove-ar.init</string>
-			<string>yehHamzaabove-ar.medi</string>
 			<string>yehTail-ar</string>
 			<string>yehTail-ar.fina</string>
 			<string>yehVabove-ar</string>
@@ -1514,12 +1319,6 @@
 			<string>yehVabove-ar.medi</string>
 			<string>yu-ar</string>
 			<string>yu-ar.fina</string>
-			<string>zah-ar</string>
-			<string>zah-ar.fina</string>
-			<string>zah-ar.init</string>
-			<string>zah-ar.medi</string>
-			<string>zain-ar</string>
-			<string>zain-ar.fina</string>
 		</array>
 		<key>name</key>
 		<string>GF_Arabic_Plus Exclusive</string>
