Don't run this on Windows, it doesn't work

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,6 +53,7 @@ jobs:
           cd gftools
           pytest tests -k 'not test_servers and not test_gfgithub'
       - name: Run diffenator2 tests
+        if: matrix.platform != 'windows-latest'
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
